--- a/cdk/requirements.txt
+++ b/cdk/requirements.txt
@@ -1,3 +1,4 @@
-aws-cdk-lib==2.110.0
+# AWS CDK dependencies
+# Use >=2.100.0 to support latest features while maintaining compatibility
+aws-cdk-lib>=2.100.0
 constructs>=10.0.0,<11.0.0
-
